# file-wiki

./: .gitignore  .mcp.json
.claude/: settings.local.json
docs/: benchmark-results.md  changelog-phase25-29.md  quick-start.md
prd/: roadmap.md
prd/queries/: initial-setup-advisor-experts.answer.md
prd/research/: bge-m3-fastembed-decision.md  classify-prompt-v2.1-decision.md  competitive-analysis.md  crossref-deep-analysis.md  crossref-optimization.md  external-analysis-2026-05-15.md  external-analysis-2026-05-22.md  external-analysis-2026-05-27-graphrag.md  external-analysis-2026-06-04-adaptive-chunking.md  external-analysis-2026-06-04-grimoire.md  file-search-spec-2026-06-16.md  graphdb-review-phase55.md  personal-os-skills.md  plugin-architecture-2026-06-04.md  rag-roadmap.md  search-extraction-plan.md  tfm-tabpfn-analysis.md
prd/roadmap/: crossref-implementation-plan.md  external-trigger-checklist.md  next-session-c-items.md  (+2 more)
spec/: architecture-archive.md  architecture.md  classification_and_verification.md  deprecated.md  domain-map.md  scenarios.md  webapp-design.md
src/: .gitignore  CLAUDE.md  Cargo.toml  doc_types.toml  pipeline.toml  prompts.toml
src/.config/: nextest.toml
src/crates/adapters/: Cargo.toml
src/crates/adapters/src/: lib.rs  stub.rs
src/crates/adapters/src/driven/: mod.rs
src/crates/adapters/src/driven/embedding/: claude_embed.rs  fastembed_adapter.rs  fastembed_sparse.rs  local_embed.rs  mod.rs  openai_embed.rs  python_onnx_embed.rs
src/crates/adapters/src/driven/llm/: anthropic_adapter.rs  chunked_agent.rs  claude_adapter.rs  fallback_adapter.rs  gemini_adapter.rs  mod.rs  ollama_adapter.rs  openai_llm_adapter.rs  prompts.rs  response.rs
src/crates/adapters/src/driven/notification/: composite.rs  slack_notify.rs  telegram_notify.rs
src/crates/adapters/src/driven/notify/: composite.rs  format.rs  mod.rs  slack_notify.rs  telegram_notify.rs
src/crates/adapters/src/driven/preprocessing/: preprocessor.rs
src/crates/adapters/src/driven/rerank/: claude_reranker.rs  fastembed_reranker.rs  mod.rs  null_reranker.rs
src/crates/adapters/src/driven/reranking/: claude_reranker.rs
src/crates/adapters/src/driven/settings/: mod.rs  sqlite.rs
src/crates/adapters/src/driven/storage/: mod.rs  network_storage.rs  notion_storage.rs  remote_null.rs  s3_storage.rs  telegram_storage.rs  webdav_storage.rs  zstd_storage.rs
src/crates/adapters/src/driven/transport/: fs.rs  http_client.rs  mod.rs  sqlite.rs  stdio.rs
src/crates/adapters/src/driven/vector_db/: local_store.rs
src/crates/adapters/src/driven/verify/: claude_verifier.rs  mod.rs
src/crates/adapters/src/driving/: auto_resolution.rs  auto_sensitive.rs  mod.rs  terminal_resolution.rs  terminal_sensitive.rs  tray.rs  watcher.rs
src/crates/core/: Cargo.toml
src/crates/core/src/: audit.rs  lib.rs  service.rs
src/crates/core/src/domain/: audit_log.rs  auto_reindexer.rs  chunking.rs  chunking_quality.rs  classifier.rs  config_models.rs  cross_reference.rs  crossref_optimizer.rs  deduplicator.rs  diagnostics.rs  error_log.rs  hooks.rs  incremental.rs  lint.rs  mmr.rs  mod.rs  models.rs  purge.rs  search_engine.rs  settings_models.rs  tests.rs  topic_merger.rs  topic_merger_tests.rs  vec_io.rs  verification.rs  wiki_export.rs  wikilink.rs  work_queue.rs
src/crates/core/src/plugin/: connection_pool.rs  handle.rs  mod.rs  permission_gate.rs  registry.rs
src/crates/core/src/ports/: input.rs  mod.rs  output.rs  settings_repo.rs
src/crates/core/src/ports/outbound/: mod.rs
src/crates/core/src/ports/raw_transport/: mod.rs
src/crates/core/src/reasoning/: mod.rs  verifier.rs
src/crates/core/src/use_cases/: crossref.rs  maintenance.rs  mod.rs  process_file.rs
src/crates/shared/: Cargo.toml
src/crates/shared/src/: audit_anomaly.rs  auto_suggester.rs  cached_llm.rs  cli.rs  config.rs  config_snapshot.rs  credential_store.rs  host_tools_cache.rs  lib.rs  mcp_server.rs  platform.rs  secrets.rs  settings_audit_adapter.rs  settings_db.rs  setup_dryrun.rs  setup_modules.rs  setup_modules.toml  setup_review.rs  setup_rules.toml  test_helpers.rs  tray.rs
src/modals/app/: Cargo.toml  tauri.conf.json
src/modals/app/src/: commands.rs  index.html  main.rs  service.rs  state.rs
src/modals/cli/: Cargo.toml
src/modals/cli/src/: main.rs
src/modals/cli/src/daemon/: mod.rs  unix.rs  windows.rs
src/modals/cli/tests/: actor_scenarios.rs  bench_micro.rs  bench_prompt_compare.rs  bench_real.rs  bench_real_corpus.rs  bench_real_docs.rs  bench_scale.rs  benchmark.rs  e2e_embedded.rs  llm_quality_bench.rs  notification_integration.rs  plugin_e2e.rs  real_env_tests.rs  scale_validation.rs  scenarios.rs  search_accuracy.rs
src/tests/: feedback_integration.sh
src/tests/real_corpus/: gitea_0025_webhook_doc.md  gitea_0030_package_doc.md  gitea_0031_label_doc.md  gitea_0038_team_doc.md  gitea_0040_repository_doc.md  gitea_0048_migration_doc.md  gitea_0055_api_token_doc.md  gitea_0057_organization_doc.md  gitea_0061_issue_doc.md  gitea_0066_oauth2_doc.md  gitea_0069_action_doc.md  gitea_0074_deploy_key_doc.md  gitea_0079_registry_doc.md  gitea_0082_pull_request_doc.md  gitea_0083_wiki_doc.md  gitea_0084_release_doc.md  gitea_0087_ssh_key_doc.md  gitea_0092_milestone_doc.md  gitea_0093_branch_protection_doc.md  gitea_0096_notification_doc.md  java_0004_stream_guide.md  java_0005_optional_guide.md  java_0006_completablefuture_guide.md  java_0008_path_guide.md  java_0009_files_guide.md  java_0011_scanner_guide.md  java_0016_executorservice_guide.md  java_0017_atomicinteger_guide.md  java_0018_reentrantlock_guide.md  java_0019_future_guide.md  java_0020_arraylist_guide.md  java_0022_string_guide.md  java_0023_thread_guide.md  java_0027_httpclient_guide.md  java_0029_files_guide.md  java_0030_pattern_guide.md  java_0032_stringbuilder_guide.md  java_0033_linkedlist_guide.md  java_0035_concurrenthashmap_guide.md  java_0039_future_guide.md  (+241 more)
src/ui/: dashboard.css  dashboard.js  index.html  package-lock.json  package.json  playwright-test.js
tests/: e2e-realworld.md  preprocess-e2e.md
(+225 files in other folders)
