[package]
name = "file-pipeline-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
file-pipeline-core = { path = "../core" }
# DB 본체 (cycle 7 d3). adapters/driven/{settings,vector_db}는 본 crate의 thin re-export (d5)
module-storage-db  = { path = "../../../../_rust_module/module-storage-db" }
module-storage     = { path = "../../../../_rust_module/module-storage" }
module-storage-api = { path = "../../../../_rust_module/module-storage-api" }
module-notify      = { path = "../../../../_rust_module/module-notify" }
module-notify-api  = { path = "../../../../_rust_module/module-notify-api" }
module-llm-prompts = { path = "../../../../_rust_module/module-llm-prompts" }
module-llm         = { path = "../../../../_rust_module/module-llm" }
module-llm-api     = { path = "../../../../_rust_module/module-llm-api" }
module-llm-chunked = { path = "../../../../_rust_module/module-llm-chunked" }
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
async-trait        = { workspace = true }
notify             = { workspace = true }
chrono             = { workspace = true }
reqwest            = { workspace = true, features = ["json", "multipart"] }
similar            = { workspace = true }
regex              = { workspace = true }
# qdrant-client 제거
# Phase 64 트리거 #11: ort/tokenizers (Rust 네이티브 ONNX) 폐기. fastembed가 동일 기능 + 정적 링크 + 안정성 모두 우월.
fastembed  = { version = "5", optional = true }
zstd       = { workspace = true, optional = true }
ndarray            = { workspace = true }
instant-distance   = { workspace = true }
memmap2            = { workspace = true }
bytemuck           = { workspace = true }
rayon              = { workspace = true }
moka               = { workspace = true }
calamine           = { workspace = true }
zip                = { workspace = true }
tempfile           = "3"
chardetng          = "0.1"
encoding_rs        = "0.8"
# step-o3 (2026-06-17, outbound-umbrella-1): telegram_storage 의 telegram_message_map 직접 접근
rusqlite           = { workspace = true }
# hex-arch-d prep-3 (2026-06-17, settings-db-split-1): SettingsDb 본체 이전 동반 (todo 추출/프롬프트 toml)
sha2               = { workspace = true }
hex                = { workspace = true }
toml               = { workspace = true }

# hex-arch-d step-s5 (2026-06-17): tray.rs → adapters/driving/tray.rs 이전 동반 (shared → adapters)
[target.'cfg(windows)'.dependencies]
tray-icon          = "0.19"

[features]
fastembed = ["dep:fastembed", "dep:zstd"]

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
