[package]
name = "file-pipeline-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
regex       = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
similar     = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
thiserror   = "1"

# cycle 7 module-storage-db-1 step-d2 — 도메인 타입 + 출력 포트 단일 진실원.
# core는 본 crate를 re-export 하여 file_pipeline_core::domain::* / ports::* 경로 호환 유지.
# module-storage-db(api/impl)도 본 crate만 의존 → core 무관 → 순환 없음.
fp-domain-types    = { path = "../../../../_rust_module/fp-domain-types" }

# Phase 201 — plugin protocol (host 측 PluginRegistry + permission gate)
# plugin-architecture-2026-06-04.md §2-D / §5-C
fp-plugin-protocol = { path = "../../../../_rust_module/fp-plugin-protocol" }
# Phase 202 본진입 — cross-platform Connection (named pipe / Unix domain socket)
# plugin-architecture-2026-06-04.md §2-B
fp-plugin-sdk      = { path = "../../../../_rust_module/fp-plugin-sdk" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time", "net", "io-util", "sync"] }
