[package]
name = "file-pipeline-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
file-pipeline-core     = { path = "../core" }
file-pipeline-adapters = { path = "../adapters" }
anyhow                 = { workspace = true }
serde                  = { workspace = true }
serde_json             = { workspace = true }
tracing                = { workspace = true }
dirs                   = { workspace = true }
toml                   = { workspace = true }
toml_edit              = "0.22"
chrono                 = { workspace = true }
clap                   = { workspace = true }
tokio                  = { workspace = true }
tracing-subscriber     = { workspace = true }
tracing-appender       = { workspace = true }
notify                 = { workspace = true }
rmcp                   = { workspace = true }

module-secrets-api     = { path = "../../../../_rust_module/module-secrets-api" }
module-secrets         = { path = "../../../../_rust_module/module-secrets" }
rusqlite               = { workspace = true }
sha2                   = { workspace = true }
hex                    = { workspace = true }
async-trait            = { workspace = true }
regex                  = { workspace = true }

[target.'cfg(windows)'.dependencies]
tray-icon              = "0.19"

[dev-dependencies]
tempfile = "3"

[features]
fastembed = ["file-pipeline-adapters/fastembed"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("fastembed"))'] }
